[tool.poetry]
name = "topdf"
version = "0.1.0"
description = ""
authors = ["amzdll"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pypdf2 = "^3.0.1"
fastapi = "^0.109.0"
docx2pdf = "^0.1.8"
img2pdf = "^0.5.1"
pillow = "^10.2.0"
uvicorn = "^0.26.0"
python-multipart = "^0.0.6"
mypy = "^1.8.0"
types-pillow = "^10.2.0.20240111"
fpdf = "^1.7.2"
types-fpdf2 = "^2.7.7.20240106"
python-docx = "^1.1.0"
reportlab = "^4.0.9"
pypandoc = "^1.12"
python-magic-bin = "^0.4.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
